Fix issues with broken CSS code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,8 @@ img[usemap] {
     font-size: 1.6rem;
     font-weight: 400;
     font-family: 'Creepster', sans-serif;
-    letter-spacing: .08rem;
     text-decoration: none;
-  font-size: 1.6rem;
-  font-weight: 400;
-  font-family: 'Creepster', sans-serif;
-  letter-spacing: .1rem;
-  text-decoration: none;
+  	letter-spacing: .1rem;
 }
 
 .navbar-nav li {
@@ -47,8 +42,6 @@ img[usemap] {
 }
 
 a.nav-link {
-    color: #000;
-a.nav-link{
     color: #000 !important;
 }
 
@@ -59,7 +52,6 @@ a.nav-link{
 
 a.nav-link:hover {
     color: #fff;
-  color: #fff !important;
 }
 
 a.nav-link:active {
@@ -75,21 +67,6 @@ a.nav-link:active {
 
 /*--- Home page button ---*/ 
 
-/* .play-btn {
-    cursor: pointer;
-    height: 60px;
-    width: 100px;
-    padding: 8px;
-    position: absolute;
-    bottom: 30%;
-    right: 40%;
-    /* z-index: 2; */
-    /* text-decoration: none;
-    background: #ff9e00;
-
-} */
-
-
 .copyright {
     background-color: #ff9e00;
     margin: 0 auto;
@@ -98,7 +75,7 @@ a.nav-link:active {
     bottom: 0;
     padding: 0;
     text-align: center;
-    font-family: Creepster;
+    font-family: 'Creepster', sans-serif;
     text-decoration: none;
     color: #000;
 }
